<resources>
    <string name="app_name">Funny Meme Maker and Generator</string>
    <string name="hyperlink">By continuing, you agree to our <a href="https://sites.google.com/view/gpsofflineapps/home">Privacy Policy.</a></string>
    <string name="ad_banner">570681927643832_570682054310486</string>
    <string name="ad_insters">570681927643832_570682060977152</string>
    <string name="ad_native">570681927643832_570682050977153</string>
    <string name="label_brush">Brush</string>
    <string name="label_shape">Shape</string>
    <string name="label_oval">Oval</string>
    <string name="label_rectangle">Rectangle</string>
    <string name="label_line">Line</string>
    <string name="label_emoji">Emoji</string>
    <string name="label_eraser">Eraser</string>
    <string name="label_eraser_mode">Eraser Mode</string>
    <string name="label_text">Text</string>
    <string name="msg_save_image">Are you want to exit without saving image ?</string>
    <string name="fab_content_desc">Create Custom Image</string>
    <string name="custom_image">Custom Image</string>
</resources>