<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ja.burhanrashid52.photoeditor.PhotoEditorView
        android:id="@+id/photoEditorView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/rvConstraintTools"
        android:layout_below="@id/linearLayout"
        app:photo_src="@drawable/blank_image" />

    <TextView
        android:id="@+id/textViewDescription"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:fontFamily="@font/roboto_medium"
        android:text="Pick an image to use it as meme"
        android:textColor="@color/black"
        android:textSize="@dimen/_16ssp"
        android:visibility="gone"
        tools:visibility="visible" />

    <RelativeLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgUndo"
                android:layout_width="@dimen/top_tool_icon_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@color/semi_black_transparent"
                android:padding="8dp"
                android:src="@drawable/ic_undo" />

            <ImageView
                android:id="@+id/imgRedo"
                android:layout_width="@dimen/top_tool_icon_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@color/semi_black_transparent"
                android:padding="8dp"
                android:src="@drawable/ic_redo" />

        </LinearLayout>


        <ImageView
            android:id="@+id/imgGallery"
            android:layout_width="@dimen/top_tool_icon_width"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@color/semi_black_transparent"
            android:padding="8dp"
            android:src="@drawable/ic_gallery" />

        <ImageView
            android:id="@+id/imgCamera"
            android:layout_width="@dimen/top_tool_icon_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_toEndOf="@id/imgGallery"
            android:background="@color/semi_black_transparent"
            android:padding="8dp"
            android:src="@drawable/ic_camera" />

        <ImageView
            android:id="@+id/imgShare"
            android:layout_width="@dimen/top_tool_icon_width"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@color/semi_black_transparent"
            android:padding="8dp"
            android:src="@drawable/ic_share" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/banner_container"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close" />


        <TextView
            android:id="@+id/txtCurrentTool"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="1"
            android:singleLine="true"
            android:text="@string/app_name"
            android:textColor="@android:color/white" />


        <ImageView
            android:id="@+id/imgSave"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:src="@drawable/ic_save"
            app:tint="@color/white" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/rvConstraintTools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/ll_bottom"
        android:background="@color/tool_bg"
        android:orientation="horizontal"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:weightSum="4">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/rootLayoutText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@color/tool_bg"
            android:onClick="toolSelected"
            android:padding="4dp">

            <ImageView
                android:id="@+id/imgBrush"
                android:layout_width="@dimen/editor_size"
                android:layout_height="@dimen/editor_size"
                android:layout_margin="4dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/ic_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtBrush"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/label_text"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgBrush" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/rootLayoutShape"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@color/tool_bg"
            android:onClick="toolSelected"
            android:padding="4dp">

            <ImageView
                android:id="@+id/imgShape"
                android:layout_width="@dimen/editor_size"
                android:layout_height="@dimen/editor_size"
                android:layout_margin="4dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/ic_oval"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtShape"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/label_shape"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgShape" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/rootLayoutEraser"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@color/tool_bg"
            android:onClick="toolSelected"
            android:padding="4dp">

            <ImageView
                android:id="@+id/imgEraser"
                android:layout_width="@dimen/editor_size"
                android:layout_height="@dimen/editor_size"
                android:layout_margin="4dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/ic_eraser"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtEraser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/label_eraser"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgEraser" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/rootLayoutEmoji"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@color/tool_bg"
            android:onClick="toolSelected"
            android:padding="4dp">

            <ImageView
                android:id="@+id/imgEmoji"
                android:layout_width="@dimen/editor_size"
                android:layout_height="@dimen/editor_size"
                android:layout_margin="4dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/ic_insert_emoticon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtEmoji"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/label_emoji"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgEmoji" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/banner_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" />

</RelativeLayout>